<resources>

    <string name="app_name">Exemplo TreinaWeb</string>
    <string name="ola_mundo">Treinaweb Cursos</string>
    <string name="Curso">Android Básico</string>
    <string name="aluno">Hugo Emiliano Almeida de Avila</string>
    <string name="msg">Digite seu nome baixo</string>
    <string name="texto_nome"></string> 
    <string name="botao_proximo">Próxima Tela</string>
    <string name="botao_ok">OK</string>
    <string name="resposta">Resposta</string>
    <string name="ensino">TreinaWeb Cursos</string>
    <string name="titulo">Informações do curso</string>
    <string name="voltar">Voltar</string>
    <string name="nome">Nome</string>
    <string name="rotulo">Selecione uma opção:</string>
    <string name="android_basico">Curso de Android Básico</string>
    <string name="java_basico">Curso de Java Básico</string>
    <string name="csharp_basico">Curso de C# Básico</string>
    <string name="menu_archive">Arquivos</string>
    <string name="menu_attachment">Adicionar um arquivos</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_home">Home</string>
    <string name="menu_mais">Mais</string>
    <string name="menu_salvar">Salvar</string> 
    <string name="menu_pesquisar">Pesquisar</string>

</resources>
