<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <CheckBox
        android:id="@+id/checkBoxAndroidBasico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="@bool/True"
        android:layout_marginTop="18dp"
        android:text="@string/android_basico" />

    <TextView
        android:id="@+id/TextViewRotulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="@bool/True"
        android:text="@string/rotulo" />

    <CheckBox
        android:id="@+id/checkBoxJavaBasico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="@bool/True"
        android:layout_below="@+id/checkBoxAndroidBasico"
        android:text="@string/java_basico" />

    <CheckBox
        android:id="@+id/checkBoxCSharpBasico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="@bool/True"
        android:layout_below="@+id/checkBoxJavaBasico"
        android:text="@string/csharp_basico" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="@bool/True"
        android:layout_below="@+id/checkBoxCSharpBasico"
        android:text="@string/botao_ok" />

    <TextView
        android:id="@+id/textViewResp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonOK"
        android:layout_below="@+id/buttonOK"
        android:layout_marginTop="23dp"
        android:text="@string/resposta" />

</RelativeLayout>
