<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Preto" >

    <TextView
        android:id="@+id/textViewMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:textColor="@color/Vermelho" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/texto_nome"
        android:textColor="@color/Vermelho" />

    <Button
        android:id="@+id/buttonProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Fechando"
        android:text="@string/botao_ok"
        android:textColor="@color/Vermelho" />

    <TextView
        android:id="@+id/textViewResposta8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewResposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resposta" />

</LinearLayout>