<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewRotulo7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/rotulo" />

    <Spinner
        android:id="@+id/spinnerCursos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textViewRotulo7" >
        </Spinner>

    <Button
        android:id="@+id/buttonOK7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewRotulo7"
        android:layout_alignLeft="@+id/textViewRotulo7"
        android:layout_below="@+id/spinnerCursos"
        android:text="@string/botao_ok" />

    <TextView
        android:id="@+id/textViewResposta7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonOK7"
        android:layout_alignLeft="@+id/buttonOK7"
        android:layout_below="@+id/buttonOK7"
        android:layout_marginTop="23dp"
        android:text="@string/resposta" />

</RelativeLayout>
